JPA 초기 설정과 CI/CD 환경 변수 설정을 업데이트 했습니다.
yml 설정 파일을 한개로 관리하기 위해 환경 별로 달라지는 값은 환경 변수화 했습니다.
로컬 실행 시에도 환경 변수 설정으로 실행하는 것을 권장합니다.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,9 +18,7 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
@@ -28,6 +26,16 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+
+    - name: Set Yaml
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: ./src/main/resources/application.yml
+      env:
+        spring.datasource.url: ${{ secrets.DB_URL }}
+        spring.datasource.username: ${{ secrets.DB_USERNAME }}
+        spring.datasource.password: ${{ secrets.DB_PASSWORD }}
+
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
