--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     implementation 'org.postgresql:postgresql:42.6.0'
 
