--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -83,7 +83,7 @@ jobs:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: fifteenth-twelfth-backend
-        environment_name: Fifteenth-twelfth-backend-env-1
+        environment_name: bside1512-env
         version_label: fifteenth-twelfth-backend-${{github.sha}}-${{steps.current-time.outputs.formattedTime}}
         region: ${{ secrets.AWS_REGION }}
         deployment_package: ./Dockerrun.aws.json
