--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,6 @@ spring:
 
 websocket:
   allow-origin-patterns: ${WEBSOCKET_ALLOW_ORIGINS} # comma separate list: http://localhost:63342, http://localhost:3000
+
+naver-client-id: ${NAVER_CLIENT_ID}
+naver-client-secret: ${NAVER_CLIENT_SECRET}
