--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -10,6 +10,9 @@ spring:
         jwt:
           issuer-uri: https://cognito-idp.ap-northeast-2.amazonaws.com/ap-northeast-2_jkv39SsWR
 
+cors:
+  allow-origin-patterns: '*'
+
 websocket:
   allow-origin-patterns: '*'
 
