--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: none
+    properties:
+      hibernate:
+        default_batch_fetch_size: 100
 
 cors:
   allow-origin-patterns: ${CORS_ALLOW_ORIGINS_PATTERNS}
