네이버 qr 코드 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,5 @@ websocket:
 
 naver-client-id: ${NAVER_CLIENT_ID}
 naver-client-secret: ${NAVER_CLIENT_SECRET}
+
+service-url: https://bside1512.dev
